--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,17 @@ node_js:
   - 11
   - 12
 
-script:
-  - yarn test:prod && yarn build
-
-after_success:
-  - yarn travis-deploy-once "yarn report-coverage"
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn travis-deploy-once "yarn deploy-docs"; fi
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn travis-deploy-once "yarn semantic-release"; fi
+jobs:
+  include:
+    - stage: test
+      script: yarn test:prod && yarn build
+    - stage: deploy
+      node_js:
+        - 10
+      script:
+        - yarn build && yarn report-coverage
+        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn deploy-docs; fi
+        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn semantic-release; fi
 
 branches:
   except:
