--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,22 @@ node_js:
   - 11
   - 12
 
+script:
+  - yarn test:prod
+  - yarn build
+
 jobs:
   include:
-    - stage: test
+    - stage: coverage
+      node_js:
+        - 10
       script:
         - yarn test:prod && yarn report-coverage
+    - stage: deploy
+      node_js:
+        - 10
+      script:
         - yarn build
-    # - stage: deploy
-    #   node_js:
-    #     - 10
-    #   script:
-    #     - yarn build
     #     - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn deploy-docs; fi
     #     - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn semantic-release; fi
 
