--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --theme minimal src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
@@ -85,38 +85,38 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
-    "@types/jest": "24.9.1",
-    "@types/node": "12.20.4",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.31",
     "colors": "1.4.0",
-    "commitizen": "3.1.2",
+    "commitizen": "4.2.3",
     "coveralls": "3.1.0",
-    "cz-conventional-changelog": "2.1.0",
-    "husky": "3.1.0",
-    "jest": "24.9.0",
-    "jest-config": "24.9.0",
-    "lint-staged": "9.5.0",
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "5.0.9",
+    "jest": "26.6.3",
+    "jest-config": "26.6.3",
+    "lint-staged": "10.5.4",
     "lodash.camelcase": "4.3.0",
-    "prettier": "1.19.1",
+    "prettier": "2.2.1",
     "prompt": "1.1.0",
-    "replace-in-file": "4.3.1",
+    "replace-in-file": "6.2.0",
     "rimraf": "3.0.2",
-    "rollup": "1.32.1",
+    "rollup": "2.39.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-sourcemaps": "0.5.0",
+    "rollup-plugin-sourcemaps": "0.6.3",
     "rollup-plugin-typescript2": "0.30.0",
-    "semantic-release": "15.14.0",
+    "semantic-release": "17.3.9",
     "shelljs": "0.8.4",
-    "ts-jest": "24.3.0",
-    "ts-node": "8.10.2",
-    "tslint": "5.20.1",
+    "ts-jest": "26.5.1",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
-    "tslint-config-standard": "8.0.1",
+    "tslint-config-standard": "9.0.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typedoc": "0.17.8",
-    "typescript": "3.9.9"
+    "typedoc": "0.20.26",
+    "typescript": "4.1.5"
   }
 }
