--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
-      "tslint --fix",
-      "git add"
+      "tslint --fix"
     ]
   },
   "husky": {
@@ -93,7 +92,7 @@
     "commitizen": "4.2.3",
     "coveralls": "3.1.0",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "5.0.9",
+    "husky": "4",
     "jest": "26.6.3",
     "jest-config": "26.6.3",
     "lint-staged": "10.5.4",
