ci: report coverage with github action

--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -32,5 +32,9 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install dependencies
         run: yarn install
-      - run: yarn test:prod && yarn report-coverage
+      - run: yarn test:prod
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - run: yarn build
