--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
+    "@commitlint/cli": "16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/jest": "28.1.1",
     "@types/node": "14.18.0",
     "colors": "1.4.0",
